--- a/themes/spectre/layout/_pages/gallery.ejs
+++ b/themes/spectre/layout/_pages/gallery.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hexo-material@1.5.0/source/css/gallery.min.css">
+<link rel="stylesheet" href="https://cat.yufan.me/asserts/spectre/styles/gallery/gallery.min.css">
 
 <body>
     <!-- Wrapper -->
@@ -35,9 +35,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@2.2.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hexo-material@1.5.0/source/js/lazyload.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hexo-material@1.5.0/source/js/gallery/gallery.min.js"></script>
+    <script src="https://cat.yufan.me/asserts/spectre/scripts/jquery.min.js"></script>
+    <script src="https://cat.yufan.me/asserts/spectre/scripts/lazyload.min.js"></script>
+    <script src="https://cat.yufan.me/asserts/spectre/scripts/gallery.min.js"></script>
     <script>
         queue.offer(function(){
             $('.lazy').lazyload({
