--- a/themes/spectre/layout/_source/footer.ejs
+++ b/themes/spectre/layout/_source/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Import JS -->
-<script>lsloader.js("lazy_js","/js/lazyload.min.js")</script>
+<script>lsloader.js("lazy_js","https://cat.yufan.me/asserts/spectre/scripts/lazyload.min.js")</script>
 
 <!-- Comment -->
 <% if(theme.comment.use){ %>
