--- a/themes/spectre/layout/_pages/gallery.ejs
+++ b/themes/spectre/layout/_pages/gallery.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cat.yufan.me/asserts/spectre/styles/gallery/gallery.min.css">
+<link rel="stylesheet" href="https://cat.yufan.me/asserts/spectre/styles/gallery.min.css">
 
 <body>
     <!-- Wrapper -->
@@ -36,7 +36,7 @@
 
     <!-- Scripts -->
     <script src="https://cat.yufan.me/asserts/spectre/scripts/jquery.min.js"></script>
-    <script src="https://cat.yufan.me/asserts/spectre/scripts/lazyload.min.js"></script>
+    <script src="https://cat.yufan.me/asserts/spectre/scripts/jquery.lazyload.min.js"></script>
     <script src="https://cat.yufan.me/asserts/spectre/scripts/gallery.min.js"></script>
     <script>
         queue.offer(function(){
